--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
   "author": "Sebastian Villacis",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "express": "^4.17.1",
-    "pg": "^8.5.1"
+    "express-validator": "^6.9.1",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11"
   }
 }
