--- a/NodeProject/package.json
+++ b/NodeProject/package.json
@@ -9,9 +9,14 @@
   "author": "Sebastian Villacis",
   "license": "ISC",
   "dependencies": {
+    "@okta/jwt-verifier": "^2.0.0",
+    "@okta/oidc-middleware": "^4.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "express-validator": "^6.9.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
