--- a/adminpro/package.json
+++ b/adminpro/package.json
@@ -19,9 +19,14 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@okta/okta-angular": "^3.0.1",
+    "@okta/okta-auth-js": "^4.6.0",
+    "@okta/okta-signin-widget": "^5.2.2",
     "chart.js": "^2.9.4",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
